# sys

./: .gitignore  bare.nix  build.nix  common.nix  docker.nix  flake.nix  home.nix  niri.kdl  postcheckout.ts  rdp.nix  remote-builder.nix  wsl.nix  zed-settings.json
.claude/: settings.local.json
.github/workflows/: build.yml
base/: bare.nix  common.nix  wsl.nix
feat/: autognome.nix  autogui.nix  autoniri.nix  autoplasma.nix  autosway.nix  blit-webrtc-forwarder.nix  blit.nix  btrm.nix  clickhouse.nix  delegate.nix  docker.nix  flatpak.nix  indentcode.nix  indentmoo.nix  kube.nix  libk.nix  mail.nix  media.nix  mediaclient.nix  moo.nix  mymoo.nix  nvidia.nix  ollama-nvidia.nix  ollama-rocm.nix  ollama.nix  plentys.nix  plugdev.nix  print.nix  sunshine.nix  tb-client.nix  tb-server.nix  thunderbolt.nix  vbox.nix  vnc.nix  vt.nix  waydroid.nix  zfs.nix
folks/: alex.nix  bkolobara.nix  dauriac.nix  hugotwin.nix  joao.nix
home/: _lib.nix  base.nix  config.nix  desktop.nix  programs.nix  system.nix  trusted.nix
hosts/: _lib.nix  amoeba.nix  chimp.nix  dog.nix  hare.nix  hound.nix  indentbox.nix  indentmac.nix  kitten.nix  monkey.nix  odin3iso.nix  rabbit.nix  sloth.nix
humon/: .gitignore  Cargo.toml  build.rs
humon/humon-common/: Cargo.toml
humon/humon-common/src/: lib.rs
humon/humon-ebpf/: Cargo.toml
humon/humon-ebpf/src/: main.rs
humon/src/: main.rs
hw/: ax52.nix  deck.nix  dodge.nix  fw.nix  hyperv.nix  macvm.nix  nas1.nix  nv1.nix  odin3.nix  odin3ufs.nix  pc.nix  rp5.nix  rp5k.nix  tower.nix  vbox.nix  zfw.nix
parts/: dev.nix  hosts.nix
(+6 files in other folders)
