[package]
name = "humon-common"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"], default-features = false }
postcard = { version = "1.0", default-features = false }

[features]
default = []
std = ["serde/std", "postcard/use-std"]
userspace = ["std"]
